--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,50 @@
 
     <!-- Main -->
     <main class="page__main main">
-      <!--Section--><!--/ Section-->
+      <!--Section-->
+      <section class="main__preview preview">
+        <div class="container">
+          <div class="preview__wrapper">
+            <div class="preview__content">
+              <h1 class="title title--main">
+                Помощь в иммиграции,визах и адаптации в Канаде
+              </h1>
+              <ul class="preview__list">
+                <li class="preview__item">Квалифированный штат сотрудников</li>
+                <li class="preview__item">Комплексное сопровождение</li>
+                <li class="preview__item">
+                  Лицензия на оказание иммиграционных услуг
+                </li>
+              </ul>
+              <div class="prwview__details details">
+                <a href="#" class="btn details__link">Подробнее</a>
+                <button class="btn">Задать вопрос</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img
+          src="images/decor/cube.svg"
+          alt="no-iamge"
+          class="preview__cube preview__cube--left"
+        />
+        <img
+          src="images/decor/cube.svg"
+          alt="no-iamge"
+          class="preview__cube preview__cube--right"
+        />
+        <img
+          src="images/decor/dots-white.svg"
+          alt="no-iamge"
+          class="preview__dots"
+        />
+        <img
+          src="images/decor/dots-red.svg"
+          alt="no-iamge"
+          class="preview__dots preview__dots--left"
+        />
+      </section>
+      <!--/ Section-->
 
       <!--Popup--><!--/ Popup-->
     </main>
