--- a/src/index.html
+++ b/src/index.html
@@ -331,7 +331,180 @@
 						 <!-- pagination -->
 						 <div class="swiper-pagination slider-pagination"></div>
 				 	</div>
-					 
+					<div class="row row-cols-1 row-cols-md-3 details">
+						<div class="col">
+							<div class="details__header">
+								<a href="#" class="details__link link--section">
+									 <span>Смотреть все</span>
+									 <svg class="icon">
+											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+									 </svg> 
+								</a>
+						 	</div>
+							<div class="details-card">
+								<picture class="details-card__preview">
+									<img src="images/slider/details_start.jpg" alt="no-image">
+									<div class="details-card__info">
+										<span>Бесплатная оценка шансов на иммиграцию в Канаду</span>
+									</div>
+								</picture>
+								<ul class="details-card__list">
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Жизнь и работа в Верноне (провинция Британская Колумбия)</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Что такое лендинг и как он происходит <br> по прибытию в Канаду</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Можно ли подавать заявление на иммиграцию в две провинции</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Как проверить статус рассмотрения иммиграционных документов в Канаде</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="details__header">
+								<a href="#" class="details__link link--section">
+									 <span>Новости</span>
+									 <svg class="icon">
+											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+									 </svg> 
+								</a>
+						 	</div>
+							<div class="details-card">
+								<picture class="details-card__preview">
+									<img src="images/slider/details_start.jpg" alt="no-image">
+									<div class="details-card__info">
+										<span>Новая Шотландия пригласила иммигрировать предпринимателей</span>
+									</div>
+								</picture>
+								<ul class="details-card__list">
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Жизнь и работа в Верноне (провинция Британская Колумбия)</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Что такое лендинг и как он происходит <br> по прибытию в Канаду</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Альберта опубликовала результаты двух розыгрышей</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">30 000 кандидатов выбраны в программе семейного спонсорства</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="details__header">
+								<h3 class="details__title">У вас есть вопросы?</h3>
+						 	</div>
+							<div class="question">
+								<picture class="question__image">
+									<img src="images/slider/details__question.jpg" alt="no-photo">
+								</picture>
+								<span class="question__info">Мы оцифровали все иммиграционные программы и поможем вам переехать в Канаду!</span>
+								<button class="btn btn--question">
+									<span>Смотреть все</span>
+									<svg class="icon">
+										 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+									</svg> 
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="main__slider slider slider--immigrate">
+				<div class="container">
+					<div class="section-header">
+						 <h2 class="section-slider__title title">Иммиграция</h2>
+						 <a href="#" class="link link--section">
+								<span>Смотреть все</span>
+								<svg class="icon">
+									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+								</svg> 
+						 </a>
+					</div>
+					<div class="slider__wrapper">
+							 <!-- Slider main container -->
+						 <div class="swiper slider">
+								 <!-- Additional required wrapper -->
+								 <div class="swiper-wrapper">
+									 <!-- Slides -->
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/slider/slide_1.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/slider/slide_2.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Федеральные программы иммиграции</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/slider/slide_3.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Провинциальные программы иммиграции</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/slider/slide_4.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Атлантический иммиграционный пилот</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/slider/slide_1.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+							 </div>
+						 </div>
+ 
+						 <!-- pagination -->
+						 <div class="swiper-pagination slider-pagination"></div>
+				 	</div>
 				</div>
 			</section>
 
