details in slider

--- a/src/index.html
+++ b/src/index.html
@@ -331,10 +331,10 @@
 						 <!-- pagination -->
 						 <div class="swiper-pagination slider-pagination"></div>
 				 	</div>
-					<div class="row row-cols-1 row-cols-md-3 details">
+					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 details">
 						<div class="col">
 							<div class="details__header">
-								<a href="#" class="details__link link--section">
+								<a href="#" class="details__link">
 									 <span>Смотреть все</span>
 									 <svg class="icon">
 											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -366,7 +366,7 @@
 						</div>
 						<div class="col">
 							<div class="details__header">
-								<a href="#" class="details__link link--section">
+								<a href="#" class="details__link">
 									 <span>Новости</span>
 									 <svg class="icon">
 											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -375,7 +375,7 @@
 						 	</div>
 							<div class="details-card">
 								<picture class="details-card__preview">
-									<img src="images/slider/details_start.jpg" alt="no-image">
+									<img src="images/slider/details_news.jpg" alt="no-image">
 									<div class="details-card__info">
 										<span>Новая Шотландия пригласила иммигрировать предпринимателей</span>
 									</div>
@@ -406,7 +406,7 @@
 								</picture>
 								<span class="question__info">Мы оцифровали все иммиграционные программы и поможем вам переехать в Канаду!</span>
 								<button class="btn btn--question">
-									<span>Смотреть все</span>
+									<span>Получить консультацию</span>
 									<svg class="icon">
 										 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
 									</svg> 
@@ -416,98 +416,6 @@
 					</div>
 				</div>
 			</section>
-
-			<section class="main__slider slider slider--immigrate">
-				<div class="container">
-					<div class="section-header">
-						 <h2 class="section-slider__title title">Иммиграция</h2>
-						 <a href="#" class="link link--section">
-								<span>Смотреть все</span>
-								<svg class="icon">
-									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
-								</svg> 
-						 </a>
-					</div>
-					<div class="slider__wrapper">
-							 <!-- Slider main container -->
-						 <div class="swiper slider">
-								 <!-- Additional required wrapper -->
-								 <div class="swiper-wrapper">
-									 <!-- Slides -->
-									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_1.jpg" alt="no-iamge">
-												</picture>
-												<div class="slider-card__info">
-													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
-												</div>
-												<picture class="slider-card__logo">
-													 <img src="images/little-logo.png" alt="no-logo">
-												</picture>
-										 </a>
-									 </div>
-									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_2.jpg" alt="no-iamge">
-												</picture>
-												<div class="slider-card__info">
-													 <h4 class="slider-card__subtitle">Федеральные программы иммиграции</h4>
-												</div>
-												<picture class="slider-card__logo">
-													 <img src="images/little-logo.png" alt="no-logo">
-												</picture>
-										 </a>
-									 </div>
-									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_3.jpg" alt="no-iamge">
-												</picture>
-												<div class="slider-card__info">
-													 <h4 class="slider-card__subtitle">Провинциальные программы иммиграции</h4>
-												</div>
-												<picture class="slider-card__logo">
-													 <img src="images/little-logo.png" alt="no-logo">
-												</picture>
-										 </a>
-									 </div>
-									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_4.jpg" alt="no-iamge">
-												</picture>
-												<div class="slider-card__info">
-													 <h4 class="slider-card__subtitle">Атлантический иммиграционный пилот</h4>
-												</div>
-												<picture class="slider-card__logo">
-													 <img src="images/little-logo.png" alt="no-logo">
-												</picture>
-										 </a>
-									 </div>
-									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_1.jpg" alt="no-iamge">
-												</picture>
-												<div class="slider-card__info">
-													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
-												</div>
-												<picture class="slider-card__logo">
-													 <img src="images/little-logo.png" alt="no-logo">
-												</picture>
-										 </a>
-									 </div>
-							 </div>
-						 </div>
- 
-						 <!-- pagination -->
-						 <div class="swiper-pagination slider-pagination"></div>
-				 	</div>
-				</div>
-			</section>
-
 
 			<!--/ Section-->
 
