add page services

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 														<span class="price__ru">5950 ₽</span>
 														<span class="price__cad">$100 CAD</span>
 													</div>
-													<a href="#" class="popular-card__btn btn">Подробнее</a>
+													<a href="#" class="popular-card__btn btn btn--little btn--bottom">Подробнее</a>
 												</div>
 											</div>
 											<picture class="popular-card__logo">
@@ -121,7 +121,7 @@
 														 <span class="price__ru">7440 ₽</span>
 														 <span class="price__cad">$130 CAD</span>
 													 </div>
-													 <a href="#" class="popular-card__btn btn">Подробнее</a>
+													 <a href="#" class="popular-card__btn btn btn--little btn--bottom">Подробнее</a>
 												 </div>
 											 </div>
 											 <picture class="popular-card__logo">
@@ -146,7 +146,7 @@
 														 <span class="price__ru">5950 ₽</span>
 														 <span class="price__cad">$100 CAD</span>
 													 </div>
-													 <a href="#" class="popular-card__btn btn">Подробнее</a>
+													 <a href="#" class="popular-card__btn btn btn--little btn--bottom">Подробнее</a>
 												 </div>
 											 </div>
 											 <picture class="popular-card__logo">
@@ -171,7 +171,7 @@
 														 <span class="price__ru">29950 ₽</span>
 														 <span class="price__cad">$515 CAD</span>
 													 </div>
-													 <a href="#" class="popular-card__btn btn">Подробнее</a>
+													 <a href="#" class="popular-card__btn btn btn--little btn--bottom">Подробнее</a>
 												 </div>
 											 </div>
 											 <picture class="popular-card__logo">
@@ -199,7 +199,7 @@
 														 <span class="price__ru">5950 ₽</span>
 														 <span class="price__cad">$100 CAD</span>
 													 </div>
-													 <a href="#" class="popular-card__btn btn">Подробнее</a>
+													 <a href="#" class="popular-card__btn btn btn--little btn--bottom">Подробнее</a>
 												 </div>
 											 </div>
 											 <picture class="popular-card__logo">
@@ -227,7 +227,7 @@
 														 <span class="price__ru">5950 ₽</span>
 														 <span class="price__cad">$100 CAD</span>
 													 </div>
-													 <a href="#" class="popular-card__btn btn">Подробнее</a>
+													 <a href="#" class="popular-card__btn btn btn--little btn--bottom">Подробнее</a>
 												 </div>
 											 </div>
 											 <picture class="popular-card__logo">
