--- a/src/page-courses.html
+++ b/src/page-courses.html
@@ -16,23 +16,25 @@
     <!-- Main -->
     <main class="page__courses courses">
       <!--Section-->
-      <section class="page__title">
-        <h1 class="title">Услуги и курсы</h1>
-        <div class="text">
-          <p>
-            Хотите переехать в Канаду, но не знаете с чего начать или как
-            подготовить документы? Заказывайте консультацию, проходите обучение
-            на курсах или же приобретайте электронные книги.
-          </p>
+      <section class="courses__page-title">
+        <div class="container">
+          <h1 class="page-title__title title">Услуги и курсы</h1>
+          <div class="text">
+            <p>
+              Хотите переехать в Канаду, но не знаете с чего начать или как
+              подготовить документы? Заказывайте консультацию, проходите
+              обучение на курсах или же приобретайте электронные книги.
+            </p>
+          </div>
         </div>
       </section>
 
-      <section class="services">
+      <section class="courses__services services">
         <div class="container">
           <h2 class="services__title title">Услуги</h2>
           <div class="services__wrapper row row-cols-1 row-cols-md-3">
             <div class="col">
-              <div class="popular-card">
+              <div class="popular-card popular-card--big">
                 <picture class="popular-card__image">
                   <img src="images/popular/slide_1.jpg" alt="no-iamge" />
                 </picture>
@@ -50,7 +52,9 @@
                       <span class="price__ru">5950 ₽</span>
                       <span class="price__cad">$100 CAD</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn">Подробнее</a>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
                   </div>
                 </div>
                 <picture class="popular-card__logo">
@@ -59,7 +63,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="popular-card">
+              <div class="popular-card popular-card--big">
                 <picture class="popular-card__image">
                   <img src="images/popular/slide_1.jpg" alt="no-iamge" />
                 </picture>
@@ -77,7 +81,9 @@
                       <span class="price__ru">5950 ₽</span>
                       <span class="price__cad">$100 CAD</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn">Подробнее</a>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
                   </div>
                 </div>
                 <picture class="popular-card__logo">
@@ -86,7 +92,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="popular-card">
+              <div class="popular-card popular-card--big">
                 <picture class="popular-card__image">
                   <img src="images/popular/slide_1.jpg" alt="no-iamge" />
                 </picture>
@@ -104,7 +110,9 @@
                       <span class="price__ru">5950 ₽</span>
                       <span class="price__cad">$100 CAD</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn">Подробнее</a>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
                   </div>
                 </div>
                 <picture class="popular-card__logo">
@@ -116,12 +124,12 @@
         </div>
       </section>
 
-      <section class="services">
+      <section class="courses__services services services--course">
         <div class="container">
-          <h2 class="services__title title">Услуги</h2>
+          <h2 class="services__title title">Курсы</h2>
           <div class="services__wrapper row row-cols-1 row-cols-md-3">
             <div class="col">
-              <div class="popular-card">
+              <div class="popular-card popular-card--big">
                 <picture class="popular-card__image">
                   <img src="images/popular/slide_1.jpg" alt="no-iamge" />
                 </picture>
@@ -139,7 +147,9 @@
                       <span class="price__ru">5950 ₽</span>
                       <span class="price__cad">$100 CAD</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn">Подробнее</a>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
                   </div>
                 </div>
                 <picture class="popular-card__logo">
@@ -148,7 +158,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="popular-card">
+              <div class="popular-card popular-card--big">
                 <picture class="popular-card__image">
                   <img src="images/popular/slide_1.jpg" alt="no-iamge" />
                 </picture>
@@ -166,7 +176,9 @@
                       <span class="price__ru">5950 ₽</span>
                       <span class="price__cad">$100 CAD</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn">Подробнее</a>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
                   </div>
                 </div>
                 <picture class="popular-card__logo">
@@ -175,7 +187,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="popular-card">
+              <div class="popular-card popular-card--big">
                 <picture class="popular-card__image">
                   <img src="images/popular/slide_1.jpg" alt="no-iamge" />
                 </picture>
@@ -193,7 +205,267 @@
                       <span class="price__ru">5950 ₽</span>
                       <span class="price__cad">$100 CAD</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn">Подробнее</a>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="courses__services services courses__services--book">
+        <div class="container">
+          <h2 class="services__title title">Книги</h2>
+          <div class="services__wrapper row row-cols-1 row-cols-md-3">
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/book.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">
+                    15 шагов для переезда в Канаду
+                  </h4>
+                  <p class="text popular-card__desc">
+                    Хотите иммигрировать в Канаду, но не знаете с чего начать?
+                    Мы собрали 15 самых важных шагов, которые надо пройти.
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">29950 ₽</span>
+                      <span class="price__cad">$515 CAD</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/book.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">
+                    15 шагов для переезда в Канаду
+                  </h4>
+                  <p class="text popular-card__desc">
+                    Хотите иммигрировать в Канаду, но не знаете с чего начать?
+                    Мы собрали 15 самых важных шагов, которые надо пройти.
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">29950 ₽</span>
+                      <span class="price__cad">$515 CAD</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/book.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">
+                    15 шагов для переезда в Канаду
+                  </h4>
+                  <p class="text popular-card__desc">
+                    Хотите иммигрировать в Канаду, но не знаете с чего начать?
+                    Мы собрали 15 самых важных шагов, которые надо пройти.
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">29950 ₽</span>
+                      <span class="price__cad">$515 CAD</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/book.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">
+                    15 шагов для переезда в Канаду
+                  </h4>
+                  <p class="text popular-card__desc">
+                    Хотите иммигрировать в Канаду, но не знаете с чего начать?
+                    Мы собрали 15 самых важных шагов, которые надо пройти.
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">29950 ₽</span>
+                      <span class="price__cad">$515 CAD</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/book.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">
+                    15 шагов для переезда в Канаду
+                  </h4>
+                  <p class="text popular-card__desc">
+                    Хотите иммигрировать в Канаду, но не знаете с чего начать?
+                    Мы собрали 15 самых важных шагов, которые надо пройти.
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">29950 ₽</span>
+                      <span class="price__cad">$515 CAD</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--big"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="courses__services services services--course">
+        <div class="container">
+          <h2 class="services__title title">Онлайн-инструменты</h2>
+          <div
+            class="services__wrapper row row-cols-1 row-cols-md-2 row-cols-lg-4"
+          >
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/bg-articles.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">Оценка шансов</h4>
+                  <p class="text popular-card__desc">
+                    Оцените свои шансы на иммиграцию в Канаду с помощью
+                    искусственного интеллекта!
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">Бесплатно</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn--little"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/bg-articles.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">Тест английского языка</h4>
+                  <p class="text popular-card__desc">
+                    Узнайте свой уровенень владения английским, ответив на 45
+                    вопросов.
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">Бесплатно</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--little"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/bg-articles.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">Тест французского языка</h4>
+                  <p class="text popular-card__desc">
+                    А еще у нас есть такой же тест, но для проверки знаний
+                    второго государственного языка Канады.!
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">Бесплатно</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--little"
+                      >Подробнее</a
+                    >
+                  </div>
+                </div>
+                <picture class="popular-card__logo">
+                  <img src="images/little-logo.png" alt="n0-logo" />
+                </picture>
+              </div>
+            </div>
+            <div class="col">
+              <div class="popular-card popular-card--big">
+                <picture class="popular-card__image">
+                  <img src="images/bg-articles.jpg" alt="no-iamge" />
+                </picture>
+                <div class="popular-card__wrapper">
+                  <h4 class="popular-card__title">Тест французского языка</h4>
+                  <p class="text popular-card__desc">
+                    А еще у нас есть такой же тест, но для проверки знаний
+                    второго государственного языка Канады.!
+                  </p>
+                  <div class="popular-card__footer">
+                    <div class="popular-card__price price">
+                      <span class="price__ru">Бесплатно</span>
+                    </div>
+                    <a href="#" class="popular-card__btn btn btn--little"
+                      >Подробнее</a
+                    >
                   </div>
                 </div>
                 <picture class="popular-card__logo">
