--- a/src/page-courses.html
+++ b/src/page-courses.html
@@ -388,7 +388,7 @@
                     <div class="popular-card__price price">
                       <span class="price__ru">Бесплатно</span>
                     </div>
-                    <a href="#" class="popular-card__btn btn--little"
+                    <a href="#" class="popular-card__btn btn btn--little"
                       >Подробнее</a
                     >
                   </div>
