--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,278 @@
 				</div>
 			</section>
 
-         
+         <section class="main__slider slider slider--immigrate bg">
+				<div class="container">
+					<div class="section-header">
+						 <h2 class="section-slider__title title">Учеба</h2>
+						 <a href="#" class="link link--section">
+								<span>Смотреть все</span>
+								<svg class="icon">
+									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+								</svg> 
+						 </a>
+					</div>
+					<div class="slider__wrapper slider__wrapper--m0">
+							 <!-- Slider main container -->
+						 <div class="swiper slider">
+								 <!-- Additional required wrapper -->
+								 <div class="swiper-wrapper">
+									 <!-- Slides -->
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Университеты и колледжи Канады</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Поступление в канадские вузы</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Языковые школы в Канаде</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Стоимость обучения в Канаде</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+							 </div>
+						 </div>
+ 
+						 <!-- pagination -->
+						 <div class="swiper-pagination slider-pagination"></div>
+				 	</div>
+				</div>
+			</section>
+
+         <section class="main__slider slider slider--immigrate">
+				<div class="container">
+					<div class="section-header">
+						 <h2 class="section-slider__title title">Работа</h2>
+						 <a href="#" class="link link--section">
+								<span>Смотреть все</span>
+								<svg class="icon">
+									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+								</svg> 
+						 </a>
+					</div>
+					<div class="slider__wrapper slider__wrapper--m0">
+							 <!-- Slider main container -->
+						 <div class="swiper slider">
+								 <!-- Additional required wrapper -->
+								 <div class="swiper-wrapper">
+									 <!-- Slides -->
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Профессии в Канаде</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Поиск работы в Канаде</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Временная работа для иностранцев</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Global Talent Stream</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+							 </div>
+						 </div>
+ 
+						 <!-- pagination -->
+						 <div class="swiper-pagination slider-pagination"></div>
+				 	</div>
+				</div>
+			</section>
+
+         <section class="main__slider slider slider--immigrate bg">
+				<div class="container">
+					<div class="section-header">
+						 <h2 class="section-slider__title title">Визы</h2>
+						 <a href="#" class="link link--section">
+								<span>Смотреть все</span>
+								<svg class="icon">
+									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+								</svg> 
+						 </a>
+					</div>
+					<div class="slider__wrapper slider__wrapper--m0">
+							 <!-- Slider main container -->
+						 <div class="swiper slider">
+								 <!-- Additional required wrapper -->
+								 <div class="swiper-wrapper">
+									 <!-- Slides -->
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Визы в Канаду самостотельно</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Как продлить туристическую визу</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Изменть туристическую визу на студенческую</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Как продлить туристическую визу</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+									 <div class="swiper-slide slider__slide">
+										 <a href="#" class="slider-card">
+												<picture class="slider-card__iamage">
+													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												</picture>
+												<div class="slider-card__info">
+													 <h4 class="slider-card__subtitle">Изменть туристическую визу на студенческую</h4>
+												</div>
+												<picture class="slider-card__logo">
+													 <img src="images/little-logo.png" alt="no-logo">
+												</picture>
+										 </a>
+									 </div>
+							 </div>
+						 </div>
+ 
+						 <!-- pagination -->
+						 <div class="swiper-pagination slider-pagination"></div>
+				 	</div>
+				</div>
+			</section>
 
          <section class="main__project project">
             <div class="container">
