fixed page close

--- a/src/about.html
+++ b/src/about.html
@@ -186,7 +186,7 @@
                 </p>
               </div>
             </div>
-            <div class="about-content__sticky">
+            <div class="questions-sticky">
               <h4>У вас есть вопросы?</h4>
               <p>
                 Мы оцифровали все иммиграционные программы и поможем вам
