--- a/src/close.html
+++ b/src/close.html
@@ -14,136 +14,114 @@
     <!-- / Header -->
 
     <!-- Main -->
-    <main class="page__about-project about-project">
+    <main class="page__close close">
       <!--Section-->
-      <section class="about-project__content about-content">
+      <section class="access">
         <div class="container">
-          <div class="about-content__wrapper">
-            <div class="about-content__column">
-              <h1 class="about-content__title title">Контакты</h1>
-              <p>Есть вопрос? Задайте его нам!</p>
-              <picture class="about-content__picture">
-                <img src="images/contacts_preview.jpg" alt="project-photo" />
-              </picture>
-              <p>
-                Мы будем рады ответить на любые ваши вопросы. В зависимости от
-                их сложности, нам может понадобиться дополнительная консультация
-                со сторонними специалистами. Поэтому ответ может занять
-                несколько дней, но обычно мы отвечаем в течение нескольких
-                часов.
-              </p>
-              <p>
-                Как и вы, мы ценим свое время. Поэтому просим вас сперва
-                попробовать найти информацию на сайте самостоятельно и только
-                после этого писать нам.
-              </p>
-              <p>
-                Кстати, чем более подробно вы опишите свою ситуацию, тем больше
-                вариантов для иммиграции мы сможем предложить. Для оценки шансов
-                на эмиграцию мы разработали специальную анкету. Заполните ее и
-                получите автоматическую оценку шансов на вашу электронную почту.
-              </p>
-              <p>
-                Связаться с нами лучше всего по электронной почте:
-                <a href="mailto:mail@immigrant.today"> mail@immigrant.today </a>
-              </p>
-              <p>
-                Если вы написали нам и не получили ответ в течение 3 дней,
-                проверьте, пожалуйста, папку спама. Иногда наши письма попадают
-                туда.
-              </p>
-              <ul>
-                <li>Папка спама в Gmail</li>
-                <li>Папка спама в Яндекс.Почте</li>
-                <li>Папка спама в mail.ru</li>
-              </ul>
+          <h1 class="access__title title">
+            Доступ закрыт. Только для членов сообщества!
+          </h1>
+          <div class="row">
+            <div class="col cols-1 cols-lg-5">
+              <div
+                class="access-card"
+                style="
+                  background: url(images/slider/details_news.jpg) center / cover;
+                "
+              >
+                <div class="access-card__info">
+                  <span>
+                    Онтарио высполняет нехватку квалифицированных специалистов
+                  </span>
+                </div>
+              </div>
             </div>
+            <div class="col cols-1 cols-lg-7">
+              <div class="invite">
+                <div class="invite__wrapper">
+                  <div class="invite__main">
+                    <div class="invite__header">
+                      <img
+                        src="images/little-logo.png"
+                        alt="no-logo"
+                        class="invite__image"
+                      />
+                      <h2 class="title">Стать членом сообщества</h2>
+                    </div>
+                    <span class="invite__desc text text--lg">
+                      <p>
+                        Получите профессиональные советы об иммиграции в
+                        Канаду,новости,стратегии и опыт других людей.
+                      </p>
+                      Нас уже - <span>55574</span> человек (а)
+                    </span>
+                  </div>
+                  <form action="#" class="form-invite invite__form">
+                    <div class="form-invite__wrapper">
+                      <input
+                        type="text"
+                        name="text"
+                        id="text"
+                        placeholder="Ваше имя"
+                        class="input"
+                      />
+                      <input
+                        type="email"
+                        name="email"
+                        id="email"
+                        placeholder="Ваше e-mail"
+                        class="input"
+                      />
+                      <input
+                        type="password"
+                        name="password"
+                        id="password"
+                        placeholder="Пароль"
+                        class="input"
+                      />
+                      <input
+                        type="text"
+                        name="summary"
+                        id="summary"
+                        placeholder="Введите ответ"
+                        class="input"
+                      />
+                    </div>
+                    <div class="form-invite__checkbox checkbox">
+                      <div class="checkbox__wrapper">
+                        <input
+                          type="checkbox"
+                          name="checkbox"
+                          id="checkbox"
+                          class="checkbox__input"
+                        />
+                        <label for="checkbox" class="checkbox__label"
+                          >Я согласен(а) на обработку моих персональных данных
+                        </label>
+                      </div>
+                    </div>
 
-            <div class="questions-sticky">
-              <h4>У вас есть вопросы?</h4>
-              <p>
-                Мы оцифровали все иммиграционные программы и поможем вам
-                переехать в Канаду!
-              </p>
-              <button class="btn">
-                Получить консультацию
-                <svg class="icon">
-                  <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
-                </svg>
-              </button>
+                    <div class="form-invite__buttons">
+                      <button class="btn btn--max">Зарегестироваться</button>
+                      <button class="btn btn--max">Войти в аккаунт</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
-
-          <div class="invite">
-            <div class="invite__wrapper">
-              <div class="invite__main">
-                <div class="invite__header">
-                  <img
-                    src="images/little-logo.png"
-                    alt="no-logo"
-                    class="invite__image"
-                  />
-                  <h2 class="title">Стать членом сообщества</h2>
-                </div>
-                <span class="invite__desc text text--lg">
-                  <p>
-                    Получите профессиональные советы об иммиграции в
-                    Канаду,новости,стратегии и опыт других людей.
-                  </p>
-                  Нас уже - <span>55574</span> человек (а)
-                </span>
-              </div>
-              <form action="#" class="form-invite invite__form">
-                <div class="form-invite__wrapper">
-                  <input
-                    type="text"
-                    name="text"
-                    id="text"
-                    placeholder="Ваше имя"
-                    class="input"
-                  />
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Ваше e-mail"
-                    class="input"
-                  />
-                  <input
-                    type="password"
-                    name="password"
-                    id="password"
-                    placeholder="Пароль"
-                    class="input"
-                  />
-                  <input
-                    type="text"
-                    name="summary"
-                    id="summary"
-                    placeholder="Введите ответ"
-                    class="input"
-                  />
-                </div>
-                <div class="form-invite__checkbox checkbox">
-                  <div class="checkbox__wrapper">
-                    <input
-                      type="checkbox"
-                      name="checkbox"
-                      id="checkbox"
-                      class="checkbox__input"
-                    />
-                    <label for="checkbox" class="checkbox__label"
-                      >Я согласен(а) на обработку моих персональных данных
-                    </label>
-                  </div>
-                </div>
-
-                <div class="form-invite__buttons">
-                  <button class="btn btn--max">Зарегестироваться</button>
-                  <button class="btn btn--max">Войти в аккаунт</button>
-                </div>
-              </form>
-            </div>
+          <div class="questions-sticky">
+            <h4>У вас есть вопросы?</h4>
+            <p>
+              Мы оцифровали все иммиграционные программы и поможем вам переехать
+              в Канаду!
+            </p>
+            <button class="btn" type="button">
+              Получить консультацию
+              <svg class="icon">
+                <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
